--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "crypto-browserify": "^3.12.1",
     "crypto-js": "^4.2.0",
     "embla-carousel-react": "^8.5.1",
-    "framer-motion": "^11.11.17",
+    "framer-motion": "^11.18.2",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
@@ -52,6 +52,8 @@
     "next-sanity": "^9.8.21",
     "nodemailer": "^6.10.0",
     "react": "^18.3.1",
+    "react-awesome-reveal": "^4.3.1",
+    "react-calendar": "^6.0.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-icons": "^5.3.0",
